@@ -2,7 +2,6 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(lib/glclock.cc)
 AM_INIT_AUTOMAKE(rglclock, 1.4.0)
 AM_CONFIG_HEADER(config.h)
-AC_DEFINE(_GNU_SOURCE)
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_CXX
